--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-p{
-    color:darksalmon;
-    font-size: 40px;
-}
 h1{
+    background-color: aquamarine;
+    color: darksalmon;
+}
+
+
+p{
     color: deeppink;
+    font-size: 40pix;
+    background-color:chartreuse ;
 }
