--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+body{
+  
+    font-family: Arial;
+    background-color: black;
+    color:white;
+    margin: 0;
+}
+
 h1{
-    background-color: aquamarine;
-    color: darksalmon;
+    font-size: 60 px;
+    text-align: center;
 }
 
 
 p{
-    color: deeppink;
-    font-size: 40pix;
-    background-color:chartreuse ;
+    text-align: center;
+    font-size: 40px;
 }
