--- a/style.css
+++ b/style.css
@@ -11,8 +11,13 @@ h1{
     text-align: center;
 }
 
-
 p{
     text-align: center;
     font-size: 40px;
+}
+.paragrafo{
+    color: aqua;
+}
+#tituloPrincipal{
+    color:rgb(0,0,0 )
 }
