--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
-  
-    font-family: Arial;
+    margin:0;
+}
+ font-family: Arial;
     background-color: black;
     color:white;
     margin: 0;
@@ -8,6 +9,11 @@ body{
 }
 
 h1{
+    margin:0;
+    padding: 0;
+    background-color: blue;
+    width: 40;
+    border 10px solid#80ff00;
     font-size: 60 px;
     text-align: center;
 }
@@ -23,7 +29,9 @@ p{
     color:rgb(0,0,0 )
 }
 #gato{
-    width: 200px;
-    margin-left: 400px;
-    padding: 40;
+    background-color: red;
+    width: 20px;
+    margin:0;
+    padding:0;
+    border-style:solid;
 }
